// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards should match the snapshot with all data passed in correctly 1`] = `
<div
  className="Cards"
>
  <Card
    data={
      Object {
        "homeworld": "Kamino",
        "name": "David",
        "population": 20,
        "species": "wookie",
      }
    }
    id="David12345"
    key="David12345"
  />
  <Card
    data={
      Object {
        "homeworld": "Tatooine",
        "name": "Eric",
        "population": 42,
        "species": "human",
      }
    }
    id="Eric12345"
    key="Eric12345"
  />
</div>
`;

exports[`Cards should match the snapshot with all data passed in correctly 2`] = `
<div
  className="Cards"
>
  <Card
    data={
      Object {
        "climate": "temperate",
        "name": "Tatooine",
        "population": 200,
        "residents": Array [
          "Travis",
          "Robbie",
        ],
        "terrain": "grasslands, mountains",
      }
    }
    id="Tatooine12345"
    key="Tatooine12345"
  />
  <Card
    data={
      Object {
        "climate": "temperate",
        "name": "Coruscant",
        "population": 42,
        "residents": Array [
          "Steve",
          "Paul",
        ],
        "terrain": "desert",
      }
    }
    id="Coruscant12345"
    key="Coruscant12345"
  />
</div>
`;

exports[`Cards should match the snapshot with all data passed in correctly 3`] = `
<div
  className="Cards"
>
  <Card
    data={
      Object {
        "class": "wheeled",
        "model": "sedan",
        "name": "Toyota Corolla",
        "passengers": 4,
      }
    }
    id="Toyota Corolla12345"
    key="Toyota Corolla12345"
  />
  <Card
    data={
      Object {
        "class": "wheeled",
        "model": "Digger Crawler",
        "name": "Sand Crawler",
        "passengers": 30,
      }
    }
    id="Sand Crawler12345"
    key="Sand Crawler12345"
  />
</div>
`;

exports[`Cards should match the snapshot with all data passed in correctly 4`] = `
<div
  className="Cards"
>
  <Card
    data={
      Object {
        "homeworld": "Kamino",
        "name": "David",
        "population": 20,
        "species": "wookie",
      }
    }
    id="David12345"
    key="David12345"
  />
  <Card
    data={
      Object {
        "homeworld": "Tatooine",
        "name": "Eric",
        "population": 42,
        "species": "human",
      }
    }
    id="Eric12345"
    key="Eric12345"
  />
  <Card
    data={
      Object {
        "class": "wheeled",
        "model": "sedan",
        "name": "Toyota Corolla",
        "passengers": 4,
      }
    }
    id="Toyota Corolla12345"
    key="Toyota Corolla12345"
  />
</div>
`;
